adding new publications

--- a/leili.bib
+++ b/leili.bib
@@ -51,18 +51,6 @@
   year   = {2020},
 }
 
-@Unpublished{pan2020pretraining,
-  author = {Xiao Pan and Mingxuan Wang and Jiangtao Feng and Hao Zhou and Lei Li},
-  title  = {Pretraining Neural Machine Translation by Pretrained Neural Machine Translation},
-  year   = {2020},
-}
-
-@Unpublished{ru2020active,
-  author = {Dongyu Ru and Yating Luo and Lin Qiu and Hao Zhou and Lei Li and Weinan Zhang and Yong Yu},
-  title  = {Active Sentence Learning by Adversarial Uncertainty Sampling in Discrete Space},
-  year   = {2020},
-}
-
 @Unpublished{sun2020diving,
   author = {Zewei Sun and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Shujian Huang and Jiajun Chen and Lei Li},
   title  = {Diving into Document-Level Neural Machine Translation},
@@ -85,6 +73,49 @@
   author = {An Yan and Xin Wang and Jiangtao Feng and Lei Li and William Yang Wang},
   title  = {Cross-Lingual Vision-Language Navigation},
   year   = {2020},
+}
+
+@InProceedings{li2020sentence,
+  author    = {Bohan Li and Hao Zhou and Junxian He and Mingxuan Wang and Yiming Yang and Lei Li},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  title     = {On the Sentence Embeddings from BERT for Semantic Textual Similarity},
+  year      = {2020},
+  month     = nov,
+  owner     = {lilei.02},
+}
+
+@InProceedings{lin2020pre,
+  author    = {Zehui Lin and Xiao Pan and Mingxuan Wang and Xipeng Qiu and Jiangtao Feng and Hao Zhou and Lei Li},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  title     = {Pre-training Multilingual Neural Machine Translation by Leveraging Alignment Information},
+  year      = {2020},
+  month     = nov,
+}
+
+@InProceedings{zeng2020double,
+  author    = {Shuang Zeng and Runxin Xu and Baobao Chang and Lei Li},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  title     = {Double Graph Based Reasoning for Document-level Relation Extraction},
+  year      = {2020},
+  month     = nov,
+  owner     = {lilei.02},
+}
+
+@InProceedings{ru2020active,
+  author    = {Dongyu Ru and Jiangtao Feng and Lin Qiu and Hao Zhou and MIngxuan Wang and Weinan Zhang and Yong Yu and Lei Li},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings},
+  title     = {Active Sentence Learning by Adversarial Uncertainty Sampling in Discrete Space},
+  year      = {2020},
+  month     = nov,
+}
+
+@InProceedings{zhang2020constraint,
+  author    = {Maosen Zhang and Nan Jiang and Lei Li and Yexiang Xue},
+  booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings},
+  title     = {Constraint Satisfaction Driven Natural Language Generation: A Tree Search Embedded MCMC Approach},
+  year      = {2020},
+  month     = nov,
+  owner     = {lilei.02},
 }
 
 @InProceedings{song2020improving,
