--- a/leili.bib
+++ b/leili.bib
@@ -33,18 +33,6 @@
   year   = {2020},
 }
 
-@Article{kong2020foveabox,
-  author  = {Tao {Kong} and Fuchun {Sun} and Huaping {Liu} and Yuning {Jiang} and Lei {Li} and Jianbo {Shi}},
-  journal = {IEEE Transactions on Image Processing},
-  title   = {{FoveaBox}: Beyound Anchor-based Object Detection},
-  year    = {2020},
-  issn    = {1057-7149},
-  pages   = {1-10},
-  code    = {https://github.com/taokong/FoveaBox},
-  doi     = {https://doi.org/10.1109/TIP.2020.3002345},
-  eprint  = {https://arxiv.org/abs/1904.03797},
-}
-
 @Unpublished{li2020bidirectional,
   author = {Mingwei Li and Qingyuan Jiang and Yi He and Lei Li and Wujun Li},
   title  = {Bidirectional Attentive Convolutional Neural Network for Near-Duplicate Video Retrieval},
@@ -78,7 +66,7 @@
 @InProceedings{li2020sentence,
   author    = {Bohan Li and Hao Zhou and Junxian He and Mingxuan Wang and Yiming Yang and Lei Li},
   booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
-  title     = {On the Sentence Embeddings from BERT for Semantic Textual Similarity},
+  title     = {On the Sentence Embeddings from {BERT} for Semantic Textual Similarity},
   year      = {2020},
   month     = nov,
   owner     = {lilei.02},
@@ -112,7 +100,7 @@
 @InProceedings{zhang2020constraint,
   author    = {Maosen Zhang and Nan Jiang and Lei Li and Yexiang Xue},
   booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings},
-  title     = {Constraint Satisfaction Driven Natural Language Generation: A Tree Search Embedded MCMC Approach},
+  title     = {Constraint Satisfaction Driven Natural Language Generation: A Tree Search Embedded {MCMC} Approach},
   year      = {2020},
   month     = nov,
   owner     = {lilei.02},
@@ -192,6 +180,19 @@
   month     = jun,
   abstract  = {Automatic identification of mentioned entities in social media posts facilitates quick digestion of trending topics and popular opinions. Nonetheless, this remains a challenging task due to limited context and diverse name variations. In this paper, we study the problem of entity linking for Chinese news comments given mentions’ spans. We hypothesize that comments often refer to entities in the corresponding news article, as well as topics involving the entities. We therefore propose a novel model, XREF, that leverages attention mechanisms to (1) pinpoint relevant context within comments, and (2) detect supporting entities from the news article. To improve training, we make two contributions: (a) we propose a supervised attention loss in addition to the standard cross entropy, and (b) we develop a weakly supervised training scheme to utilize the large-scale unlabeled corpus. Two new datasets in entertainment and product domains are collected and annotated for experiments. Our proposed method outperforms previous methods on both datasets.},
   url       = {https://xinyuhua.github.io/Resources/akbc20/},
+}
+
+@Article{kong2020foveabox,
+  author  = {Tao {Kong} and Fuchun {Sun} and Huaping {Liu} and Yuning {Jiang} and Lei {Li} and Jianbo {Shi}},
+  journal = {IEEE Transactions on Image Processing},
+  title   = {{FoveaBox}: Beyound Anchor-based Object Detection},
+  year    = {2020},
+  issn    = {1057-7149},
+  month   = jun,
+  pages   = {1-10},
+  code    = {https://github.com/taokong/FoveaBox},
+  doi     = {https://doi.org/10.1109/TIP.2020.3002345},
+  eprint  = {https://arxiv.org/abs/1904.03797},
 }
 
 @Article{wu2020towards,
