--- a/leili.bib
+++ b/leili.bib
@@ -183,16 +183,18 @@
 }
 
 @Article{kong2020foveabox,
-  author  = {Tao {Kong} and Fuchun {Sun} and Huaping {Liu} and Yuning {Jiang} and Lei {Li} and Jianbo {Shi}},
-  journal = {IEEE Transactions on Image Processing},
-  title   = {{FoveaBox}: Beyound Anchor-based Object Detection},
-  year    = {2020},
-  issn    = {1057-7149},
-  month   = jun,
-  pages   = {1-10},
-  code    = {https://github.com/taokong/FoveaBox},
-  doi     = {https://doi.org/10.1109/TIP.2020.3002345},
-  eprint  = {https://arxiv.org/abs/1904.03797},
+  author   = {Tao {Kong} and Fuchun {Sun} and Huaping {Liu} and Yuning {Jiang} and Lei {Li} and Jianbo {Shi}},
+  journal  = {IEEE Transactions on Image Processing},
+  title    = {{FoveaBox}: Beyound Anchor-based Object Detection},
+  year     = {2020},
+  issn     = {1057-7149},
+  month    = jun,
+  pages    = {7389-7398},
+  volume   = {29},
+  abstract = {We present FoveaBox, an accurate, flexible, and completely anchor-free framework for object detection. While almost all state-of-the-art object detectors utilize predefined anchors to enumerate possible locations, scales and aspect ratios for the search of the objects, their performance and generalization ability are also limited to the design of anchors. Instead, FoveaBox directly learns the object existing possibility and the bounding box coordinates without anchor reference. This is achieved by: (a) predicting category-sensitive semantic maps for the object existing possibility, and (b) producing category-agnostic bounding box for each position that potentially contains an object. The scales of target boxes are naturally associated with feature pyramid representations. In FoveaBox, an instance is assigned to adjacent feature levels to make the model more accurate.We demonstrate its effectiveness on standard benchmarks and report extensive experimental analysis. Without bells and whistles, FoveaBox achieves state-of-the-art single model performance on the standard COCO and Pascal VOC object detection benchmark. More importantly, FoveaBox avoids all computation and hyper-parameters related to anchor boxes, which are often sensitive to the final detection performance. We believe the simple and effective approach will serve as a solid baseline and help ease future research for object detection. The code has been made publicly available at https://github.com/taokong/FoveaBox.},
+  code     = {https://github.com/taokong/FoveaBox},
+  doi      = {https://doi.org/10.1109/TIP.2020.3002345},
+  eprint   = {https://arxiv.org/abs/1904.03797},
 }
 
 @Article{wu2020towards,
