support labels and better style for publications

--- a/leili.bib
+++ b/leili.bib
@@ -157,7 +157,10 @@
   year      = {2020},
   month     = jul,
   abstract  = {It has been a common approach to pre-train a language model on a large corpus and fine-tune it on task-specific data.  In practice, we observe that fine-tuning a pre-trained model on a small dataset may lead to  over- and/or under-estimation problem.  In this paper, we propose MC-Taylor, a novel method to alleviate the above issue in text generation tasks by truncating and transferring the probability mass from over-estimated regions to under-estimated ones. Experiments on a variety of text generation datasets show that MC-Taylor consistently and significantly outperforms the fine-tuning approach. Our code is available at \url{https://github.com/NingMiao/MC-tailor}.},
+  code      = {https://github.com/NingMiao/MC-tailor},
+  eprint    = {https://arxiv.org/abs/2007.06162},
   timestamp = {2020-05-01},
+  video     = {http://slideslive.com/38928919},
 }
 
 @InProceedings{xu2020xiaomingbot,
@@ -249,6 +252,8 @@
   month     = feb,
   abstract  = {Monocular depth estimation enables 3D perception from a single 2D image, thus attracting much research attention for years. Almost all methods treat foreground and background regions (``things and stuff'') in an image equally. However, not all pixels are equal. Depth of foreground objects plays a crucial role in 3D object recognition and localization. To date how to boost the depth prediction accuracy of foreground objects is rarely discussed. In this paper, we first analyse the data distributions and interaction of foreground and background, then propose the foreground-background separated monocular depth estimation (ForeSeE) method, to estimate the foreground depth and background depth using separate optimization objectives and depth decoders. Our method significantly improves the depth estimation performance on foreground objects. Applying ForeSeE to 3D object detection, we achieve 7.5 AP gains and set new state-of-the-art results among other monocular methods.},
   addendum  = {Oral},
+  code      = {https://github.com/WXinlong/ForeSeE},
+  eprint    = {https://arxiv.org/abs/1909.07701},
 }
 
 @InProceedings{wu2020importance,
