--- a/leili.bib
+++ b/leili.bib
@@ -138,6 +138,7 @@
   code      = {https://github.com/wenxianxian/demvae},
   eprint    = {https://arxiv.org/abs/1906.06719},
   thumbnail = {shi2020dispersed_dgmvae_latent.png},
+  video     = {https://slideslive.com/38928051},
 }
 
 @InProceedings{ru2020quachie,
