--- a/leili.bib
+++ b/leili.bib
@@ -113,6 +113,7 @@
   year      = {2020},
   month     = aug,
   abstract  = {Auto-regressive  sequence  generative  models trained by Maximum Likelihood Estimation suffer  the  exposure  bias  problem  in  practical finite sample scenarios.  The crux is that the number of training samples for Maximum Likelihood Estimation is usually limited and the input data distributions are different at training and inference stages.  Many method shave been proposed to solve the above problem (Yu et al., 2017; Lu et al., 2018), which relies  on  sampling  from  the  non-stationary model distribution and suffers from high variance  or  biased  estimations.   In  this  paper, we  proposeψ-MLE,  a  new  training  scheme for auto-regressive sequence generative models, which is effective and stable when operating at large sample space encountered in text generation.   We  derive  our  algorithm  from a  new  perspective  of  self-augmentation  and introduce  bias  correction  with  density  ratio estimation.   Extensive  experimental  results on  synthetic  data  and  real-world  text  generation  tasks  demonstrate  that  our  method stably outperforms Maximum Likelihood Estimation and other state-of-the-art sequence generative  models  in  terms  of  both  quality and diversity.},
+  eprint    = {https://arxiv.org/abs/2007.06018},
   timestamp = {2020-01-07},
 }
 
@@ -222,6 +223,7 @@
   abstract  = {How to generate descriptions from structured data organized in tables? Existing approaches using neural encoder-decoder models often suffer from lacking diversity. We claim that an open set of templates is crucial for enriching the phrase constructions and realizing varied generations.Learning such templates is prohibitive since it often requires a large paired <table,description>, which is seldom available. This paper explores the problem of automatically learning reusable "templates" from paired and non-paired data. We propose the variational template machine (VTM), a novel method to generate text descriptions from data tables. Our contributions include:  a) we carefully devise a specific model architecture and losses to explicitly disentangle text template and semantic content information, in the latent spaces, and b) we utilize both small parallel data and large raw text without aligned tables to enrich the template learning. Experiments on datasets from a variety of different domains show that VTM is able generate more diversely while keeping a good fluency and quality.},
   code      = {https://github.com/ReneeYe/VariationalTemplateMachine},
   eprint    = {https://openreview.net/forum?id=HkejNgBtPB},
+  video     = {https://iclr.cc/virtual_2020/poster_HkejNgBtPB.html},
 }
 
 @InProceedings{zheng2020mirror,
@@ -234,6 +236,7 @@
   addendum  = {Oral, 1.9\% acceptance rate},
   eprint    = {https://openreview.net/forum?id=HkxQRTNYPH},
   owner     = {lilei.02},
+  video     = {https://iclr.cc/virtual_2020/poster_HkxQRTNYPH.html},
 }
 
 @InProceedings{huang2020span,
@@ -243,6 +246,7 @@
   year      = {2020},
   month     = feb,
   abstract  = {Second-order optimization methods have desirable convergence properties. However, the exact Newton method requires expensive computation for the Hessian and its inverse. In this paper, we propose SPAN, a novel approximate and fast Newton method. SPAN computes the inverse of the Hessian matrix via low-rank approximation and stochastic Hessian-vector products. Our experiments on multiple benchmark datasets demonstrate that SPAN outperforms existing first-order and second-order optimization methods in terms of the convergence wall-clock time. Furthermore, we provide a theoretical analysis of the per-iteration complexity, the approximation error, and the convergence rate. Both the theoretical analysis and experimental results show that our proposed method achieves a better trade-off between the convergence rate and the per-iteration efficiency.},
+  eprint    = {https://arxiv.org/abs/2002.03687},
 }
 
 @InProceedings{wang2020task,
