--- a/leili.bib
+++ b/leili.bib
@@ -295,6 +295,8 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
   title     = {Kernelized {Bayesian} Softmax for Text Generation},
   year      = {2019},
   month     = dec,
+  code      = {https://github.com/NingMiao/KerBS},
+  eprint    = {https://arxiv.org/abs/1911.00274},
 }
 
 @InProceedings{zhao2019what,
@@ -388,6 +390,7 @@ While for the large WMT14 English-French task with 40 millions of sentence-pairs
   year      = {2019},
   month     = jul,
   abstract  = {Variational auto-encoders (VAEs) are widely used in natural language generation due to the regularization of the latent space. However, generating sentences from the continuous latent space does not explicitly model the syntactic information. In this paper, we propose to generate sentences from disentangled syntactic and semantic spaces. Our proposed method explicitly models syntactic information in the VAE’s latent space by using the linearized tree sequence, leading to better performance of language generation. Additionally, the advantage of sampling in the disentangled syntactic and semantic latent spaces enables us to perform novel applications, such as the unsupervised paraphrase generation and syntax-transfer generation. Experimental results show that our proposed model achieves similar or better performance in various tasks, compared with state-of-the-art related work.},
+  code      = {https://github.com/baoy-nlp/DSS-VAE},
 }
 
 @InProceedings{qiu2019dynamically,
@@ -465,8 +468,9 @@ CGMH achieves high performance compared with previous
 supervised methods for sentence generation. Our code
 is released at https://github.com/NingMiao/CGMH},
   addendum  = {Oral},
+  code      = {https://github.com/NingMiao/CGMH},
+  eprint    = {http://arxiv.org/abs/1811.10996},
   file      = {:pubs/miao-aaai2019-cgmh.pdf:PDF;Software:https\:/github.com/NingMiao/CGMH:URL;PPT:pubs/miao2019cgmh - {CGMH_} Constrained Sentence Generation by Metropolis-Hastings Sampling.pdf:PDF},
-  url       = {http://arxiv.org/abs/1811.10996},
 }
 
 @InProceedings{cao2018brits,
@@ -476,19 +480,20 @@ is released at https://github.com/NingMiao/CGMH},
   year      = {2018},
   month     = dec,
   abstract  = {Time series are widely used as signals in many classification/regression tasks. It is ubiquitous that time series contains many missing values. Given multiple correlated time series data, how to fill in missing values and to predict their class labels? Existing imputation methods often impose strong assumptions of the underlying data generating process, such as linear dynamics in the state space. In this paper, we propose BRITS, a novel method based on recurrent neural networks for missing value imputation in time series data. Our proposed method directly learns the missing values in a bidirectional recurrent dynamical system, without any specific assumption. The imputed values are treated as variables of RNN graph and can be effectively updated during the backpropagation.BRITS has three advantages: (a) it can handle multiple correlated missing values in time series; (b) it generalizes to time series with nonlinear dynamics underlying; (c) it provides a data-driven imputation procedure and applies to general settings with missing data.We evaluate our model on three real-world datasets, including an air quality dataset, a health-care data, and a localization data for human activity. Experiments show that our model outperforms the state-of-the-art methods in both imputation and classification/regression accuracies.},
+  code      = {https://github.com/caow13/BRITS},
   url       = {https://arxiv.org/abs/1805.10572},
 }
 
 @InProceedings{shi2018tree,
   author    = {Shi, Haoyue and Zhou, Hao and Chen, Jiaze and Li, Lei},
-  title     = {On Tree-Based Neural Sentence Modeling},
   booktitle = {Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  title     = {On Tree-Based Neural Sentence Modeling},
   year      = {2018},
   month     = oct,
   abstract  = {Neural networks with tree-based sentence encoders have shown better results on many downstream tasks. Most of existing tree-based encoders adopt syntactic parsing trees as the explicit structure prior. To study the effectiveness of different tree structures, we replace the parsing trees with trivial trees (i.e., binary balanced tree, left-branching tree and right-branching tree) in the encoders. Though trivial trees contain no syntactic information, those encoders get competitive or even better results on all of the ten downstream tasks we investigated. This surprising result indicates that explicit syntax guidance may not be the main contributor to the superior performances of tree-based neural sentence modeling. Further analysis show that tree modeling gives better results when crucial words are closer to the final representation. Additional experiments give more clues on how to design an effective tree-based encoder.},
-  file      = {:pubs/shi2018tree - On Tree-Based Neural Sentence Modeling.pdf:PDF},
+  code      = {https://github.com/ExplorerFreda/TreeEnc},
+  eprint    = {https://arxiv.org/abs/1808.09644},
   owner     = {lilei.02},
-  url       = {https://arxiv.org/abs/1808.09644},
 }
 
 @InProceedings{li2018jersey,
@@ -538,9 +543,9 @@ selection policy with a small labeled dataset, and then exploits this policy to
 train the co-training classifiers automatically. Experimental results on
 clickbait detection and generic text classification tasks demonstrate that our
 proposed method can obtain more accurate text classification results.},
+  eprint    = {http://arxiv.org/abs/1804.06035},
   location  = {New Orleans, Louisiana},
   timestamp = {2018-05-07T10:09:16.000+0200},
-  url       = {http://arxiv.org/abs/1804.06035},
 }
 
 @InProceedings{erol2017nearly,
@@ -551,9 +556,10 @@ proposed method can obtain more accurate text classification results.},
   month     = jul,
   abstract  = {Online joint parameter and state estimation is a core problem for temporal models. Most existing methods are either restricted to a particular class of models (e.g., the Storvik filter) or computationally expensive (e.g., particle MCMC). We propose a novel nearly-black-box algorithm, the Assumed Parameter Filter (APF), a hybrid of particle filtering for state variables and assumed density filtering for parameter variables. It has the following advantages: (a) it is online and computationally efficient; (b) it is applicable to both discrete and continuous parameter spaces with arbitrary transition dynamics. On a variety of toy and real models, APF generates more accurate results within a fixed computation budget compared to several standard algorithms from the literature.},
   comment   = {The earlier version appeared in NIPS 2016 workshop on Advances in Approximate Bayesian Inference.},
-  file      = {:pubs/erol2017nearly - A Nearly-Black-Box Online Algorithm for Joint Parameter and State Estimation in Temporal Models.pdf:PDF;Appendix:pubs/erol-aaai2017-apf-appendix.pdf:PDF},
+  file      = {Appendix:pubs/erol-aaai2017-apf-appendix.pdf:PDF},
   owner     = {lilei.02},
   timestamp = {2017-01-20},
+  url       = {pubs/erol-aaai2017-apf-appendix.pdf},
 }
 
 @Article{matsubara2017non,
@@ -570,12 +576,13 @@ proposed method can obtain more accurate text classification results.},
 
 @InProceedings{wu2016swift,
   author    = {Wu, Yi and Li, Lei and Russell, Stuart J. and Bodik, Rastislav},
-  title     = {Swift: Compiled Inference for Probabilistic Programming Languages},
   booktitle = {25th International Joint Conference on Artificial Intelligence (IJCAI)},
+  title     = {Swift: Compiled Inference for Probabilistic Programming Languages},
   year      = {2016},
   month     = jul,
   abstract  = {A probabilistic program defines a probability measure over its semantic structures. One common goal of probabilistic programming languages (PPLs) is to compute posterior probabilities for arbitrary models and queries, given observed evidence, using a generic inference engine. Most PPL inference engines—even the compiled ones—incur significant runtime interpretation overhead, especially for contingent and open-universe models. This paper describes Swift, a compiler for the BLOG PPL. Swift-generated code incorporates optimizations that eliminate interpretation overhead, maintain dynamic dependencies efficiently, and handle memory management for possible worlds of varying sizes. Experiments comparing Swift with other PPL engines on a variety of inference problems demonstrate speedups ranging from 12x to 326x.},
-  file      = {:pubs/wu2016swift - Swift_ Compiled Inference for Probabilistic Programming Languages.pdf:PDF;Arxiv:http\:/arxiv.org/abs/1606.09242:URL;Software:https\:/github.com/lileicc/swift:URL},
+  code      = {https:/github.com/lileicc/swift},
+  eprint    = {http://arxiv.org/abs/1606.09242},
   owner     = {leili},
   timestamp = {2016.07.04},
 }
@@ -587,7 +594,8 @@ proposed method can obtain more accurate text classification results.},
   year      = {2016},
   month     = jul,
   abstract  = {How can we enable computers to automatically answer questions like ``Who created the character Harry Potter''? Carefully built knowledge bases provide rich sources of facts. However, it remains a challenge to answer factoid questions raised in natural language due to numerous expressions of one question. In particular, we focus on the most common questions --- ones that can be answered with a single fact in the knowledge base. We propose CFO, a Conditional Focused neural-network-based approach to answering factoid questions with knowledge bases. Our approach first zooms in a question to find more probable candidate subject mentions, and infers the final answers with a unified conditional probabilistic framework. Powered by deep recurrent neural networks and neural embeddings, our proposed CFO achieves an accuracy of 75.7\% on a dataset of 108k questions - the largest public one to date. It outperforms the current state of the art by an absolute margin of 11.8\%.},
-  file      = {:pubs/dai2016cfo - CFO_ Conditional Focused Neural Question Answering with Large-scale Knowledge Bases.pdf:PDF;Arxiv:https\:/arxiv.org/abs/1606.01994:URL;Source repo:https\:/github.com/zihangdai/CFO:URL},
+  code      = {https:/github.com/zihangdai/CFO},
+  eprint    = {https:/arxiv.org/abs/1606.01994},
   owner     = {leili},
   timestamp = {2016.07.04},
 }
