fix name removing middle name

--- a/leili.bib
+++ b/leili.bib
@@ -535,7 +535,7 @@ clickbait detection and generic text classification tasks demonstrate that our p
 }
 
 @InProceedings{erol2017nearly,
-  author    = {Erol, Yusuf B. and Wu, Yi and Li, Lei and Russell, Stuart},
+  author    = {Erol, Yusuf and Wu, Yi and Li, Lei and Russell, Stuart},
   booktitle = {the 31st AAAI Conference on Artificial Intelligence (AAAI)},
   title     = {A Nearly-Black-Box Online Algorithm for Joint Parameter and State Estimation in Temporal Models},
   year      = {2017},
@@ -561,7 +561,7 @@ clickbait detection and generic text classification tasks demonstrate that our p
 }
 
 @InProceedings{wu2016swift,
-  author    = {Wu, Yi and Li, Lei and Russell, Stuart J. and Bodik, Rastislav},
+  author    = {Wu, Yi and Li, Lei and Russell, Stuart and Bodik, Rastislav},
   booktitle = {25th International Joint Conference on Artificial Intelligence (IJCAI)},
   title     = {Swift: Compiled Inference for Probabilistic Programming Languages},
   year      = {2016},
