--- a/leili.bib
+++ b/leili.bib
@@ -70,7 +70,7 @@
   year      = {2020},
   month     = nov,
   abstract  = {Pre-trained contextual representations like BERT have achieved great success in natural language processing. However, the sentence embeddings from the pre-trained language models without fine-tuning have been found to poorly capture semantic meaning of sentences. In this paper, we argue that the semantic information in the BERT embeddings is not fully exploited. We first reveal the theoretical connection between the masked language model pre-training objective and the semantic similarity task theoretically, and then analyze the BERT sentence embeddings empirically. We find that BERT always induces a non-smooth anisotropic semantic space of sentences, which harms its performance of semantic similarity. To address this issue, we propose to transform the anisotropic sentence embedding distribution to a smooth and isotropic Gaussian distribution through normalizing flows that are learned with an unsupervised objective. Experimental results show that our proposed BERT-flow method obtains significant performance gains over the state-of-the-art sentence embeddings on a variety of semantic textual similarity tasks.},
-  code      = {https://github.com/ bohanli/BERT- flow},
+  code      = {https://github.com/bohanli/BERT-flow},
   owner     = {lilei.02},
 }
 
@@ -82,6 +82,7 @@
   month     = nov,
   abstract  = {We investigate the following question for machine translation (MT): can we develop a single universal MT model to serve as the common seed and obtain derivative and improved models on arbitrary language pairs? We propose mRASP, an approach to pre-train a universal multilingual neural machine translation model. Our key idea in mRASP is its novel technique of random aligned substitution, which brings words and phrases with simlar meanings across multiple languages closer in the representation space. We pre-train a mRASP model on 32 language pairs jointly with only public datasets. The model is then fine-tuned on downstream language pairs to obtain specialized MT models. We carry out extensive experiments on 42 translation directions across a diverse settings, including low, medium, rich resource, and as well as transferring to exotic language pairs. Experimental results demonstrate that mRASP achieves significant performance improvement compared to directly training on those target pairs. It is the first time to verify that multiple low-esource language pairs can be utilized to improve rich resource MT. Surprisingly, mRASP is even able to improve the translation quality on exotic languages that never occur in the pre- training corpus.},
   code      = {https://github. com/linzehui/mRASP},
+  eprint    = {https://arxiv.org/abs/2010.03142},
 }
 
 @InProceedings{zeng2020double,
@@ -91,7 +92,8 @@
   year      = {2020},
   month     = nov,
   abstract  = {Document-level relation extraction aims to extract relations among entities within a docuent. Different from sentence-level relation extraction, it requires reasoning over multiple sentences across paragraphs. In this paper, we propose Graph Aggregation-and-Inference Network (GAIN), a method to recognize such relations for long paragraphs. GAIN constructs two graphs, a heterogeneous mention- level graph (MG) and an entity-level graph (EG). The former captures complex interaction among different mentions and the latter aggregates mentions underlying for the same entities. Based on the graphs we propose a novel path reasoning mechanism to infer relations between entities. Experiments on the public dataset, DocRED, show GAIN achieves a significant performance improvement (2.85 on F1) over the previous state-of-the-art.},
-  code      = {https://github.com/ PKUnlp- icler/GAIN},
+  code      = {https://github.com/PKUnlp-icler/GAIN},
+  eprint    = {https://arxiv.org/abs/2009.13752},
   owner     = {lilei.02},
 }
 
@@ -223,6 +225,21 @@
   eprint  = {https://rdcu.be/b5vk7},
 }
 
+@Patent{he2020video,
+  nationality = {China},
+  number      = {201810271773.1},
+  year        = {2020},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {He, Yi and Li, Lei and Yang, Cheng and Li, Gen and Li, Yitan},
+  day         = {29},
+  dayfiled    = {29},
+  month       = may,
+  monthfiled  = dec,
+  title       = {Video Feature Extraction Method and Device},
+  owner       = {lilei.02},
+}
+
 @InProceedings{ye2020variational,
   author    = {Rong Ye and Wenxian Shi and Hao Zhou and Zhongyu Wei and Lei Li},
   booktitle = {International Conference on Learning Representations (ICLR)},
@@ -246,6 +263,36 @@
   eprint    = {https://openreview.net/forum?id=HkxQRTNYPH},
   owner     = {lilei.02},
   video     = {https://iclr.cc/virtual_2020/poster_HkxQRTNYPH.html},
+}
+
+@Patent{deng2020method,
+  nationality = {CN},
+  number      = {201811074033.5},
+  year        = {2020},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co. Ltd},
+  author      = {Deng, Jiangdong and Peng, Qu and Li, Lei and Ma, Weiying},
+  day         = {27},
+  dayfiled    = {4},
+  month       = mar,
+  monthfiled  = sep,
+  title       = {A method for producing information},
+  owner       = {lilei.02},
+}
+
+@Patent{li2020systems,
+  nationality = {US},
+  number      = {US10606846B2},
+  year        = {2020},
+  yearfiled   = {2016},
+  assignee    = {Baidu USA LLC},
+  author      = {Li, Lei and Dai, Zihang and Xu, Wei},
+  day         = {31},
+  dayfiled    = {23},
+  month       = mar,
+  monthfiled  = may,
+  title       = {Systems and methods for human inspired simple question answering (HISQA)},
+  owner       = {lilei.02},
 }
 
 @InProceedings{huang2020span,
@@ -291,6 +338,21 @@ to 3 BLEU score on the WMT14 English-German language pair which even surpasses t
   eprint    = {https://arxiv.org/abs/1908.05672},
 }
 
+@Patent{yu2020method,
+  nationality = {CN},
+  number      = {201810668219.7},
+  year        = {2020},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Yu, Linyun and Li, Lei and Yin, Haibin and Zhu, Wenjia and Jiang, Dong},
+  day         = {7},
+  dayfiled    = {26},
+  month       = jan,
+  monthfiled  = jun,
+  title       = {Method and Apparatus for generating image},
+  owner       = {lilei.02},
+}
+
 @InProceedings{miao2019kernelized,
   author    = {Miao, Ning and Zhou, Hao and Zhao, Chengqi and Shi, Wenxian and Li, Lei},
   booktitle = {the 33rd Conference on Neural Information Processing Systems (NeurIPS)},
@@ -320,6 +382,21 @@ robust to rare sentence context by imposing learned kernels to capture the close
   month     = nov,
   abstract  = {In this study, we first investigate a novel capsule network with dynamic routing for linear time Neural Machine Translation (NMT), referred as CAPSNMT. CAPSNMT uses an aggregation mechanism to map the source sentence into a matrix with pre-determined size, and then applys a deep LSTM network to decode the target sequence from the source representation. Unlike the previous work (Sutskever et al., 2014) to store the source sentence with a passive and bottom-up way, the dynamic routing policy encodes the source sentence with an iterative process to decide the credit attribution between nodes from lower and higher layers. CAPSNMT has two core properties: it runs in time that is linear in the length of the sequences and provides a more flexible way to aggregate the part-whole information of the source sentence. On WMT14 English-German task and a larger WMT14 English-French task, CAPSNMT achieves comparable results with the Transformer system. We also devise new hybrid architectures intended to combine the strength of CAPSNMT and the RNMT model. Our hybrid models obtain state-of-the-arts results on both benchmark datasets. To the best of our knowledge, this is the first work that capsule networks have been empirically investigated for sequence to sequence problems},
   eprint    = {https://arxiv.org/abs/1811.00287},
+}
+
+@Patent{chen2019method,
+  nationality = {CN},
+  number      = {201811060837.X},
+  year        = {2019},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co. Ltd},
+  author      = {Chen, Yangyu and He, Yi and Li, Lei},
+  day         = {12},
+  dayfiled    = {12},
+  month       = nov,
+  monthfiled  = sep,
+  title       = {A method and apparatus for determining a geometric transformation relationship between images},
+  owner       = {lilei.02},
 }
 
 @InProceedings{jiang2019svd,
@@ -446,6 +523,111 @@ resolve word dependencies in novel sentences.},
   file      = {:pubs/wu-cvpr2019-vse.pdf:PDF},
 }
 
+@Patent{zhou2019machine,
+  nationality = {CN},
+  number      = {201910105606.4},
+  year        = {2019},
+  yearfiled   = {2019},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Zhou, Hao and Li, Lei},
+  day         = {7},
+  dayfiled    = {1},
+  month       = jun,
+  monthfiled  = feb,
+  title       = {Machine Translation Method and Device},
+  owner       = {lilei.02},
+}
+
+@Patent{he2019method,
+  nationality = {China},
+  number      = {201810271774.6},
+  year        = {2019},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {He, Yi and Li, Lei and Yang, Cheng and Li, Gen and Li, Yitan},
+  day         = {11},
+  dayfiled    = {29},
+  month       = may,
+  monthfiled  = oct,
+  title       = {A Method and Device for Video Feature Extraction},
+  owner       = {lilei.02},
+}
+
+@Patent{zhou2019method,
+  nationality = {CN},
+  number      = {201910105002.X},
+  year        = {2019},
+  yearfiled   = {2019},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Zhou, Hao and Li, Lei and Miao, Ning},
+  day         = {31},
+  dayfiled    = {1},
+  month       = may,
+  monthfiled  = feb,
+  title       = {Method and Device for Generating Text},
+  owner       = {lilei.02},
+}
+
+@Patent{zhou2019methoda,
+  nationality = {CN},
+  number      = {201910105235.X},
+  year        = {2019},
+  yearfiled   = {2019},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Zhou, Hao and Li, Lei and Chen, Jiaze and Shi, Haoyue},
+  day         = {24},
+  dayfiled    = {1},
+  month       = may,
+  monthfiled  = feb,
+  title       = {Method and Device for generating information},
+  owner       = {lilei.02},
+}
+
+@Patent{zhou2019methodb,
+  nationality = {CN},
+  number      = {201910105235.X},
+  year        = {2019},
+  yearfiled   = {2019},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Zhou, Hao and Li, Lei},
+  day         = {10},
+  dayfiled    = {1},
+  month       = may,
+  monthfiled  = feb,
+  title       = {Method and Device for generating information},
+  owner       = {lilei.02},
+}
+
+@Patent{jiang2019construction,
+  nationality = {CN},
+  number      = {201710388497.2},
+  year        = {2019},
+  yearfiled   = {2017},
+  assignee    = {Beijing Bytedance Network Tech Co.},
+  author      = {Jiang, Dong and Zhao, Yanbin and Hou, Shuang and Xia, Xuhong and Li, Lei and Hong, Dingkun},
+  day         = {5},
+  dayfiled    = {27},
+  month       = mar,
+  monthfiled  = may,
+  title       = {Construction method and device of voice classification model.},
+  owner       = {lilei.02},
+}
+
+@Patent{he2019methoda,
+  nationality = {CN},
+  number      = {201811060981.3},
+  year        = {2019},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co. Ltd},
+  author      = {He, Yi and Li, Lei and Zong, Xianzi and Tang, Hao and Zheng, Guangguo},
+  day         = {5},
+  dayfiled    = {12},
+  month       = feb,
+  monthfiled  = sep,
+  title       = {Method and Device for searching information},
+  owner       = {lilei.02},
+}
+
 @InProceedings{miao2019cgmh,
   author    = {Miao, Ning and Zhou, Hao and Mou, Lili and Yan, Rui and Li, Lei},
   booktitle = {the 33rd {AAAI} Conference on Artificial Intelligence (AAAI)},
@@ -478,6 +660,21 @@ is released at https://github.com/NingMiao/CGMH},
   file      = {:pubs/miao-aaai2019-cgmh.pdf:PDF;Software:https\:/github.com/NingMiao/CGMH:URL;PPT:pubs/miao2019cgmh - {CGMH_} Constrained Sentence Generation by Metropolis-Hastings Sampling.pdf:PDF},
 }
 
+@Patent{li2019target,
+  nationality = {CN},
+  number      = {201811010092.6},
+  year        = {2019},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Network Tech Co. Ltd},
+  author      = {Li, Gen and Xu, Shikun and Zhu, Yandong and Li, Lei and Wang, Changhu},
+  day         = {31},
+  dayfiled    = {4},
+  month       = jan,
+  monthfiled  = aug,
+  title       = {Target Object Image Detection Method and Device},
+  owner       = {lilei.02},
+}
+
 @InProceedings{cao2018brits,
   author    = {Cao, Wei and Wang, Dong and Li, Jian and Zhou, Hao and Li, Yitan and Li, Lei},
   booktitle = {the 32nd Conference on Neural Information Processing Systems (NeurIPS)},
@@ -487,6 +684,21 @@ is released at https://github.com/NingMiao/CGMH},
   abstract  = {Time series are widely used as signals in many classification/regression tasks. It is ubiquitous that time series contains many missing values. Given multiple correlated time series data, how to fill in missing values and to predict their class labels? Existing imputation methods often impose strong assumptions of the underlying data generating process, such as linear dynamics in the state space. In this paper, we propose BRITS, a novel method based on recurrent neural networks for missing value imputation in time series data. Our proposed method directly learns the missing values in a bidirectional recurrent dynamical system, without any specific assumption. The imputed values are treated as variables of RNN graph and can be effectively updated during the backpropagation.BRITS has three advantages: (a) it can handle multiple correlated missing values in time series; (b) it generalizes to time series with nonlinear dynamics underlying; (c) it provides a data-driven imputation procedure and applies to general settings with missing data.We evaluate our model on three real-world datasets, including an air quality dataset, a health-care data, and a localization data for human activity. Experiments show that our model outperforms the state-of-the-art methods in both imputation and classification/regression accuracies.},
   code      = {https://github.com/caow13/BRITS},
   url       = {https://arxiv.org/abs/1805.10572},
+}
+
+@Patent{yu2018method,
+  nationality = {CN},
+  number      = {201810669838.8},
+  year        = {2018},
+  yearfiled   = {2018},
+  assignee    = {Beijing Bytedance Tech Co. Ltd},
+  author      = {Yu, Linyun and Li, Lei and Yin, Haibin and Jiang, Dong},
+  day         = {30},
+  dayfiled    = {26},
+  month       = nov,
+  monthfiled  = jun,
+  title       = {Method and apparatus for generating image},
+  owner       = {lilei.02},
 }
 
 @InProceedings{shi2018tree,
@@ -954,6 +1166,51 @@ clickbait detection and generic text classification tasks demonstrate that our p
   keywords     = {click model, user behavior, web search},
   location     = {Barcelona, Spain},
   numpages     = {5},
+}
+
+@Patent{chen2009adaptive,
+  nationality = {US},
+  number      = {US 7,634,471},
+  year        = {2009},
+  yearfiled   = {2006},
+  assignee    = {Microsoft},
+  author      = {Chen, Zheng and Li, Lei and Lin, Chenxi and Liu, Qiaoling and Wang, Jian and Zhang, Benyu},
+  day         = {14},
+  dayfiled    = {29},
+  month       = dec,
+  monthfiled  = mar,
+  title       = {Adaptive grouping in a file network},
+  owner       = {lilei.02},
+}
+
+@Patent{chen2009system,
+  nationality = {US},
+  number      = {US 7,624,130},
+  year        = {2009},
+  yearfiled   = {2006},
+  assignee    = {Microsoft},
+  author      = {Chen, Zheng and Li, Lei and Lin, Chenxi and Liu, Qiaoling and Wang, Jian and Zhang, Benyu},
+  day         = {24},
+  dayfiled    = {30},
+  month       = nov,
+  monthfiled  = mar,
+  title       = {System and method for exploring a semantic file network},
+  owner       = {lilei.02},
+}
+
+@Patent{chen2009extracting,
+  nationality = {US},
+  number      = {US 7,502,785},
+  year        = {2009},
+  yearfiled   = {2006},
+  assignee    = {Microsoft},
+  author      = {Chen, Zheng and Li, Lei and Lin, Chenxi and Liu, Qiaoling and Wang, Jian and Zhang, Benyu},
+  day         = {10},
+  dayfiled    = {30},
+  month       = mar,
+  monthfiled  = mar,
+  title       = {Extracting Semantic Attributes},
+  owner       = {lilei.02},
 }
 
 @InProceedings{xu2008inferring,
