adding the wmt20 bib entries

--- a/leili.bib
+++ b/leili.bib
@@ -1,5 +1,24 @@
 % Encoding: UTF-8
 
+@InProceedings{wu2020volctrans,
+  author       = {Liwei Wu and Xiao Pan and Zehui Lin and Yaoming Zhu and Mingxuan Wang and Lei Li},
+  booktitle    = {Proceedings of the Fifth Conference on Machine Translation (Volume 2: Shared Task Papers)},
+  title        = {The Volctrans Machine Translation System for WMT20},
+  year         = {2020},
+  entrysubtype = {workshop},
+  owner        = {lilei.02},
+}
+
+@InProceedings{xu2020volctrans,
+  author       = {Runxin Xu and Zhuo Zhi and Jun Cao and Mingxuan Wang and Lei Li},
+  booktitle    = {Proceedings of the Fifth Conference on Machine Translation (Volume 2: Shared Task Papers)},
+  title        = {Volctrans Parallel Corpus Filtering System for WMT 2020},
+  year         = {2020},
+  comment      = {Winning the Champion in German-French translation of WMT20!},
+  entrysubtype = {workshop},
+  owner        = {lilei.02},
+}
+
 @Unpublished{bai2020self,
   author = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
   title  = {Self-Training with Heterogeneous Teachers Improves Neural Machine Translation},
@@ -115,6 +134,22 @@
   abstract  = {Generating natural language under complex constraints is a principled formulation towards controllable text generation. We present a framework to allow specification of combinatorial constraints for sentence generation. We propose TSMH1, an efficient method to generate high likelihood sentences with respect to a pre-trained language model while satisfying the constraints. Our approach is highly flexible, requires no task-specific training, and leverages efficient constraint satisfaction solving techniques. To better handle the combinatorial constraints, a tree search algorithm is embedded into the proposal process of the Markov chain Monte Carlo (MCMC) to explore candidates that satisfy more constraints. Compared to existing MCMC approaches, our sampling approach has a better mixing performance. Experiments show that TSMH achieves consistent and significant improvement on multiple language generation tasks.},
   code      = {https://github.com/Milozms/TSMH},
   owner     = {lilei.02},
+}
+
+@Patent{deng2020sentiment,
+  nationality = {China},
+  number      = {CN109087205B},
+  year        = {2020},
+  yearfiled   = {2018},
+  author      = {Jiangdong Deng and Lei Li and Weiying Ma},
+  day         = {18},
+  dayfiled    = {10},
+  month       = sep,
+  monthfiled  = aug,
+  note        = {舆情指数的预测方法及装置、计算机设备和可读存储介质},
+  title       = {Sentiment Prediction Method and Device},
+  type        = {patent},
+  owner       = {lilei.02},
 }
 
 @InProceedings{song2020improving,
