adding bib entry

--- a/leili.bib
+++ b/leili.bib
@@ -1,24 +1,5 @@
 % Encoding: UTF-8
 
-@InProceedings{wu2020volctrans,
-  author       = {Liwei Wu and Xiao Pan and Zehui Lin and Yaoming Zhu and Mingxuan Wang and Lei Li},
-  booktitle    = {Proceedings of the Fifth Conference on Machine Translation (Volume 2: Shared Task Papers)},
-  title        = {The Volctrans Machine Translation System for WMT20},
-  year         = {2020},
-  entrysubtype = {workshop},
-  owner        = {lilei.02},
-}
-
-@InProceedings{xu2020volctrans,
-  author       = {Runxin Xu and Zhuo Zhi and Jun Cao and Mingxuan Wang and Lei Li},
-  booktitle    = {Proceedings of the Fifth Conference on Machine Translation (Volume 2: Shared Task Papers)},
-  title        = {Volctrans Parallel Corpus Filtering System for WMT 2020},
-  year         = {2020},
-  comment      = {Winning the Champion in German-French translation of WMT20!},
-  entrysubtype = {workshop},
-  owner        = {lilei.02},
-}
-
 @Unpublished{bai2020self,
   author = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
   title  = {Self-Training with Heterogeneous Teachers Improves Neural Machine Translation},
@@ -80,6 +61,27 @@
   author = {An Yan and Xin Wang and Jiangtao Feng and Lei Li and William Yang Wang},
   title  = {Cross-Lingual Vision-Language Navigation},
   year   = {2020},
+}
+
+@InProceedings{wu2020volctrans,
+  author       = {Liwei Wu and Xiao Pan and Zehui Lin and Yaoming Zhu and Mingxuan Wang and Lei Li},
+  booktitle    = {Proceedings of the Fifth Conference on Machine Translation (Volume 2: Shared Task Papers)},
+  title        = {The Volctrans Machine Translation System for WMT20},
+  year         = {2020},
+  month        = nov,
+  comment      = {Winning the Champion in German-French translation of WMT20!},
+  entrysubtype = {workshop},
+  owner        = {lilei.02},
+}
+
+@InProceedings{xu2020volctrans,
+  author       = {Runxin Xu and Zhuo Zhi and Jun Cao and Mingxuan Wang and Lei Li},
+  booktitle    = {Proceedings of the Fifth Conference on Machine Translation (Volume 2: Shared Task Papers)},
+  title        = {Volctrans Parallel Corpus Filtering System for WMT 2020},
+  year         = {2020},
+  month        = nov,
+  entrysubtype = {workshop},
+  owner        = {lilei.02},
 }
 
 @InProceedings{li2020sentence,
