--- a/leili.bib
+++ b/leili.bib
@@ -63,6 +63,19 @@
   year   = {2020},
 }
 
+@InProceedings{wang2020solov2,
+  author    = {Wang, Xinlong and Zhang, Rufeng and Kong, Tao and Li, Lei and Shen, Chunhua},
+  booktitle = {the 34th Conference on Neural Information Processing Systems (NeurIPS)},
+  title     = {{SOLOv2}: Dynamic and Fast Instance Segmentation},
+  year      = {2020},
+  month     = dec,
+  abstract  = {In this work, we design a simple, direct, and fast framework for instance segmen- tation with strong performance. To this end, we propose a novel and effective approach, termed SOLOv2, following the principle of the SOLO method. First, our new framework is empowered by an efficient and holistic instance mask representation scheme, which dynamically segments each instance in the image, without resorting to bounding box detection. Specifically, the object mask generation is decoupled into a mask kernel prediction and mask feature learning, which are responsible for generating convolution kernels and the feature maps to be convolved with, respectively. Second, SOLOv2 significantly reduces inference overhead with our novel matrix non-maximum suppression (NMS) technique. Our Matrix NMS performs NMS with parallel matrix operations in one shot, and yields better results. We demonstrate that the proposed SOLOv2 achieves the state-of-the- art performance with high efficiency, making it suitable for both mobile and cloud applications. A light-weight version of SOLOv2 executes at 31.3 FPS and yields 37.1% AP on COCO test-dev. Moreover, our state-of-the-art results in object detection (from our mask byproduct) and panoptic segmentation show the potential of SOLOv2 to serve as a new strong baseline for many instance-level recognition tasks.},
+  code      = {https://github.com/WXinlong/SOLO},
+  eprint    = {https://arxiv.org/abs/2003.10152},
+  owner     = {lilei.02},
+  thumbnail = {wang2020solov2_case.png},
+}
+
 @InProceedings{wu2020volctrans,
   author       = {Liwei Wu and Xiao Pan and Zehui Lin and Yaoming Zhu and Mingxuan Wang and Lei Li},
   booktitle    = {Proceedings of the Fifth Conference on Machine Translation (Volume 2: Shared Task Papers)},
