--- a/leili.bib
+++ b/leili.bib
@@ -84,6 +84,7 @@
   month        = nov,
   comment      = {Winning the Champion in German-French translation of WMT20!},
   entrysubtype = {workshop},
+  eprint       = {https://arxiv.org/abs/2010.14806},
   owner        = {lilei.02},
 }
 
