adding AAAI papers

--- a/leili.bib
+++ b/leili.bib
@@ -3,13 +3,13 @@
 @Unpublished{bai2020self,
   author = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
   title  = {Self-Training with Heterogeneous Teachers Improves Neural Machine Translation},
-  year   = {2020},
+  year   = {2100},
 }
 
 @Unpublished{bai2020triangular,
   author   = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
   title    = {Triangular Unsupervised Neural Machine Translation},
-  year     = {2020},
+  year     = {2100},
   addendum = {in submission},
 }
 
@@ -17,50 +17,97 @@
   author = {Yu Bao and Hao Zhou and Jiangtao Feng and Mingxuan Wang and Shujian Huang and Jiajun Chen and Lei Li},
   note   = {in submission},
   title  = {{PNAT}: Non-autoregressive Transformer by Position Learning},
-  year   = {2020},
-}
-
-@Unpublished{dong2020doubly,
-  author   = {Qianqian Dong and Mingxuan Wang and Hao Zhou and Zhen Yang and Bo Xu and Lei Li},
-  title    = {Doubly Supervised Encoder for End-to-end Speech Translation},
-  year     = {2020},
-  addendum = {in submission},
-}
-
-@Unpublished{huang2020acutum,
-  author = {Xunpeng Huang and Zhengyang Liu and Zhe Wang and Yue Yu and Lei Li},
-  title  = {Acutum: an Adaptive Angular Regularized Optimization Algorithm},
-  year   = {2020},
+  year   = {2100},
 }
 
 @Unpublished{li2020bidirectional,
   author = {Mingwei Li and Qingyuan Jiang and Yi He and Lei Li and Wujun Li},
   title  = {Bidirectional Attentive Convolutional Neural Network for Near-Duplicate Video Retrieval},
-  year   = {2020},
+  year   = {2100},
 }
 
 @Unpublished{sun2020diving,
   author = {Zewei Sun and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Shujian Huang and Jiajun Chen and Lei Li},
   title  = {Diving into Document-Level Neural Machine Translation},
-  year   = {2020},
+  year   = {2100},
 }
 
 @Unpublished{tian2020conversational,
   author = {Youzhi Tian and Zhou Yu and Cheng Yang and Hang Li and Lei Li},
   title  = {Conversational Contextualized Multimodal Representation Learning},
-  year   = {2020},
-}
-
-@Unpublished{wu2020textgail,
-  author = {Qingyang Wu and Lei Li and Zhou Yu},
-  title  = {TextGAIL: Generative Adversarial Imitation Learning for Text Generation},
-  year   = {2020},
+  year   = {2100},
 }
 
 @Unpublished{yan2020cross,
   author = {An Yan and Xin Wang and Jiangtao Feng and Lei Li and William Yang Wang},
   title  = {Cross-Lingual Vision-Language Navigation},
-  year   = {2020},
+  year   = {2100},
+}
+
+@InProceedings{song2021triangular,
+  author    = {Zhenqiao Song and Jiaze Chen and Hao Zhou and Lei Li},
+  booktitle = {Proceedings of the 14th International Conference on Web Search and Data Mining (WSDM)},
+  title     = {Triangular Bidword Generation for Sponsored Search Auction},
+  year      = {2021},
+  month     = mar,
+  owner     = {lilei.02},
+}
+
+@InProceedings{dong2021consecutive,
+  author    = {Qianqian Dong and Mingxuan Wang and Hao Zhou and Shuang Xu and Bo Xu and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {Consecutive Decoding for Speech-to-text Translation},
+  year      = {2021},
+  month     = feb,
+  eprint    = {https://arxiv.org/abs/2009.09737},
+  owner     = {lilei.02},
+}
+
+@InProceedings{dong2021listen,
+  author    = {Qianqian Dong and Rong Ye and Mingxuan Wang and Hao Zhou and Shuang Xu and Bo Xu and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {Listen, Understand and Translate: Triple Supervision Decouples End-to-end Speech-to-text Translation},
+  year      = {2021},
+  month     = feb,
+  eprint    = {https://arxiv.org/abs/2009.09704},
+  owner     = {lilei.02},
+}
+
+@InProceedings{huang2021acmo,
+  author    = {Xunpeng Huang and Runxin Xu and Hao Zhou and Zhe Wang and Zhengyang Liu and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {ACMo: Angle-Calibrated Moment Methods for Stochastic Optimization},
+  year      = {2021},
+  month     = feb,
+  eprint    = {https://arxiv.org/abs/2006.07065},
+  owner     = {lilei.02},
+}
+
+@InProceedings{liang2021finding,
+  author    = {Jianze Liang and Chengqi Zhao and Mingxuan Wang and Xipeng Qiu and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {Finding Sparse Structure for Domain Specific Neural Machine Translation},
+  year      = {2021},
+  month     = feb,
+  owner     = {lilei.02},
+}
+
+@InProceedings{wu2021textgail,
+  author    = {Qingyang Wu and Lei Li and Zhou Yu},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {{TextGAIL}: Generative Adversarial Imitation Learning for Text Generation},
+  year      = {2021},
+  month     = feb,
+  eprint    = {https://arxiv.org/abs/2004.13796},
+}
+
+@InProceedings{zhang2021taxonomy,
+  author    = {Jieyu Zhang and Xiangchen Song and Ying Zeng and Jiaze Chen and Jiaming Shen and Yuning Mao and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {Taxonomy Completion via Triplet Matching Network},
+  year      = {2021},
+  month     = feb,
+  owner     = {lilei.02},
 }
 
 @InProceedings{wang2020solov2,
